--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -135,20 +135,44 @@
 
 </div>
 
+  <style>
+      .resources {
+          height: 500px !important;
+          overflow-y: scroll;
+          overflow-wrap: break-word;
+  }​
+  </style>
 
-<div class='row-fluid'>
-  <div class="span6">
+<div class= "span4" style="text-align:center">
+    <%= link_to  "<h3>Resources</h3>".html_safe, '#resources', { 'data-toggle' => 'modal', 'data-target' => "#resources"}%>
+</div>
+
+
+<div id="resources" class="modal hide fade in" style="width:700px; text-align:center;">
+  <h3>Resources:</h3>
+  <% if current_user_is_aiddata %>
+    <%= render 'resources_for_aiddata' %>
+  <% end %>
     <div class='row-fluid'>
-      <%= render 'project_resources' %>
-      <% if current_user_is_aiddata %>
-        <h4>Sources:</h4>
-        <p class='muted'>
-          Visible to AidData users only.
-        </p>
-        <%= render 'project_sources' %>
-      <% end %>
+      <div class="resources">
+          <%= render 'project_resources' %>
+        </div>
     </div>
-  </div>
+</div>
+
+
+
+       <div class='row-fluid'>
+          <% if current_user_is_aiddata %>
+
+            <h4>Sources:</h4>
+            <p class='muted'>
+              Visible to AidData users only.
+            </p>
+            <%= render 'project_sources' %>
+          <% end %>
+        </div>
+
 
   <div class='span6 well'>
     <h2>Comments</h2>
