--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -123,44 +123,52 @@
     <ul>
 </div>
 
+
+  <style>
+      .scrolling_popup {
+          height: 500px !important;
+          overflow-y: scroll;
+          overflow-wrap: break-word;
+      }​
+  </style>
+
+  <!--  scrollable popup for resources -->
+  <div id="resources" class="modal hide fade in" style="width:700px; text-align:center;">
+    <h3>Resources:</h3>
+    <% if current_user_is_aiddata %>
+        <%= render 'resources_for_aiddata' %>
+    <% end %>
+    <div class='row-fluid'>
+      <div class="scrolling_popup">
+        <%= render :partial => 'project_resources', :locals => { :limit => false } %>
+      </div>
+    </div>
+  </div>
+
+
 <div class="row-fluid">
+    <div class="span6">
+      <h4>Resources:</h4>
+      <% if current_user_is_aiddata %>
+          <%= render 'resources_for_aiddata' %>
+      <% end %>
+      <%= render :partial => 'project_resources', :locals => { :limit => true } %>
+      <div style="text-align:center">
+        <%= link_to  "<h4>View All Resources</h4>".html_safe, '#resources', { 'data-toggle' => 'modal', 'data-target' => "#resources"}%>
+      </div>
+    </div>
+
   <div class="span6">
     <h4>Participating Organizations:</h4>
     <%= render 'project_participating_organizations' %>
   </div>
+
   <div class="span6">
     <h4> Contacts:</h4>
       <%= render 'project_contacts' %>
   </div>
 
 </div>
-
-  <style>
-      .resources {
-          height: 500px !important;
-          overflow-y: scroll;
-          overflow-wrap: break-word;
-  }​
-  </style>
-
-<div class= "span4" style="text-align:center">
-    <%= link_to  "<h3>Resources</h3>".html_safe, '#resources', { 'data-toggle' => 'modal', 'data-target' => "#resources"}%>
-</div>
-
-
-<div id="resources" class="modal hide fade in" style="width:700px; text-align:center;">
-  <h3>Resources:</h3>
-  <% if current_user_is_aiddata %>
-    <%= render 'resources_for_aiddata' %>
-  <% end %>
-    <div class='row-fluid'>
-      <div class="resources">
-          <%= render 'project_resources' %>
-        </div>
-    </div>
-</div>
-
-
 
        <div class='row-fluid'>
           <% if current_user_is_aiddata %>
