--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -154,7 +154,7 @@
       <% end %>
       <%= render :partial => 'project_resources', :locals => { :limit => true } %>
       <div style="text-align:center">
-        <%= link_to  "<h4>View All Resources</h4>".html_safe, '#resources', { 'data-toggle' => 'modal', 'data-target' => "#resources"}%>
+        <%= link_to  "<h5>View All Resources</h5>".html_safe, '#resources', { 'data-toggle' => 'modal', 'data-target' => "#resources"}%>
       </div>
     </div>
 
@@ -170,16 +170,33 @@
 
 </div>
 
-       <div class='row-fluid'>
-          <% if current_user_is_aiddata %>
 
-            <h4>Sources:</h4>
-            <p class='muted'>
-              Visible to AidData users only.
-            </p>
-            <%= render 'project_sources' %>
-          <% end %>
+<!--  scrollable popup for resources -->
+<div id="sources" class="modal hide fade in" style="width:700px; text-align:center;">
+  <h3>Sources:</h3>
+  <div class='row-fluid'>
+    <div class="scrolling_popup">
+      <%= render :partial => 'project_sources', :locals => { :limit => false } %>
+    </div>
+  </div>
+</div>
+
+   <div class='row-fluid'>
+     <div class='span6'>
+      <% if current_user_is_aiddata %>
+
+        <h4>Sources:</h4>
+        <p class='muted'>
+          Visible to AidData users only.
+        </p>
+         <%= render :partial => 'project_sources', :locals => { :limit => true } %>
+        <div style="text-align:center">
+           <%= link_to  "<h5>View All Sources</h5>".html_safe, '#sources', { 'data-toggle' => 'modal', 'data-target' => "#sources"}%>
         </div>
+      <% end %>
+     </div>
+        <%= render('project_flow_class_rounds') %>
+    </div>
 
 
   <div class='span6 well'>
@@ -188,20 +205,7 @@
     <%= render 'comment_form' %>
   </div>
 </div>
-<% if current_user_is_aiddata %>
-  <div class='row-fluid '>
-    <div class='well span6'>
-      <h4>Flow Class Code Rounds:</h4>
-      <ul class='unstyled'>
-        <li><b>Arbitrated Value:</b> <%= @project.flow_class.show_round("master") %> </li>
-        <li><b>Round 1:</b> <%= @project.flow_class.show_round(1) %> </li>
-        <li><b>Round 2:</b> <%= @project.flow_class.show_round(2) %> </li>
-      </ul>
-        <span class='muted' ><i> All three code rounds are only visible to 
-          AidData-affiliated users.</i></span>
-      </div>
-  </div>
-<% end %>
+
 
 </div>
 <%= render('project_flaggable')  %>
