--- a/app/views/projects/_project_sources.html.erb
+++ b/app/views/projects/_project_sources.html.erb
@@ -1,30 +1,13 @@
 <ul class='unstyled'>
-  <% @project.sources.each do |s| %>
-    <li class="container-fluid flaggable" flaggable_type='Source' flaggable_id=<%= s.id %>>
-      <% if s.url.present? %>
-        <span class='row-fluid'>
-          <strong class='span12'>
-            <%= link_to s.url, s.url, target: "_blank" %>
-          </strong>
-          <% s.flags.each do |flag| %>
-            <%= render partial: 'flag_superscript', locals: { flag: flag} %>
-          <% end %>
-        </span>
+  <% if limit == true %>
+    <% @project.sources[0..1].each do |s| %>
+        <%= render partial: 'project_source', locals: {s: s} %>
+    <% end %>
+  <% else %>
+      <% @project.sources.each do |s| %>
+          <%= render partial: 'project_source', locals: {s: s} %>
       <% end %>
-      <div class='row-fluid'>
-        <ul >
-          <li>
-            Date: <%= s.date.blank? ? @unset_data : " #{s.date.strftime("%d %B %Y")} " %>
-          </li>
-          <li>
-            Document type: <%= s.document_type.nil? ? @unset_data : link_to(s.document_type.name, s.document_type) %>
-          </li>
-          <li>
-            Search engine type: <%= s.source_type.nil? ? @unset_data : link_to( s.source_type.name, s.source_type) %>
-          </li>
-        </ul>
-      </div>
-    </li>
+
   <% end %>
   <% if @project.sources.blank? %>
     <li>
