--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -199,7 +199,7 @@
     </div>
 
 
-  <div class='span6 well'>
+<div class='row-fluid well'>
     <h2>Comments</h2>
     <%= render 'project_comments' %>
     <%= render 'comment_form' %>
