--- a/app/views/projects/_project_source.html.erb
+++ b/app/views/projects/_project_source.html.erb
@@ -1,4 +1,4 @@
-<li class="container-fluid flaggable" flaggable_type='Source' flaggable_id=<%= s.id %>>
+<div class="container-fluid flaggable" flaggable_type='Source' flaggable_id=<%= s.id %>>
   <% if s.url.present? %>
         <span class='row-fluid'>
           <strong class='span12'>
@@ -10,7 +10,8 @@
         </span>
   <% end %>
   <div class='row-fluid'>
-    <ul >
+
+    <ul>
       <li>
         Date: <%= s.date.blank? ? @unset_data : " #{s.date.strftime("%d %B %Y")} " %>
       </li>
@@ -21,5 +22,6 @@
         Search engine type: <%= s.source_type.nil? ? @unset_data : link_to( s.source_type.name, s.source_type) %>
       </li>
     </ul>
+
   </div>
-</li>
+</div>
