--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -198,13 +198,14 @@
         <%= render('project_flow_class_rounds') %>
     </div>
 </br>
+<div class='row-fluid'>
+    <div class='span9 well'>
+        <h2>Comments</h2>
 
-<div class='row-fluid well'>
-    <h2>Comments</h2>
-    <%= render 'comment_form' %>
-    <%= render 'project_comments' %>
-
-  </div>
+            <%= render 'comment_form' %>
+            <%= render 'project_comments' %>
+      </div>
+    </div>
 </div>
 
 
