--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -133,7 +133,7 @@
   </style>
 
   <!--  scrollable popup for resources -->
-  <div id="resources" class="modal hide fade in" style="width:700px; text-align:center;">
+  <div id="resources" class="modal hide fade in" style="width:700px; padding:10px;">
     <h3>Resources:</h3>
     <% if current_user_is_aiddata %>
         <%= render 'resources_for_aiddata' %>
@@ -172,7 +172,7 @@
 
 
 <!--  scrollable popup for resources -->
-<div id="sources" class="modal hide fade in" style="width:700px; text-align:center;">
+<div id="sources" class="modal hide fade in" style="width:700px; padding:10px;">
   <h3>Sources:</h3>
   <div class='row-fluid'>
     <div class="scrolling_popup">
