added new defualt image for project page

--- a/app/views/media_items/_media_upload_form.html.erb
+++ b/app/views/media_items/_media_upload_form.html.erb
@@ -46,7 +46,7 @@
           </li>
       <!-- Default image, if no files/videos are published. -->
       <% end.empty? %>
-         <%= image_tag('adt.png')%>
+         <%= image_tag('aiddata_notag.png')%>
       <% end %>
     </ul>
   </div>
