added margins to share video

--- a/app/views/media_items/_media_upload_form.html.erb
+++ b/app/views/media_items/_media_upload_form.html.erb
@@ -113,7 +113,7 @@
   </div>
 
   <!-- share video popup box -->
-  <div id="share_video" class="modal hide fade in" style="text-align:center;">
+  <div id="share_video" class="modal hide fade in" style="text-align:center; padding:20px;">
       <h3>Share a Video</h3>
       <% if current_user %>
           <p>Enter url here:</p>
