--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -37,8 +37,10 @@
     .flex-caption {
         position:absolute;
         left:50;right:50;bottom:0;
+        min-height: 30px;
         background:rgba(0, 0, 0,0.6);
-        z-index:1;padding:0px, 10px,10px,10px;
+        z-index:1;
+        padding:0px, 10px,10px,10px;
         width:580px;
         color: #FFFFFF;
         alink: #C0C0C0;
@@ -62,11 +64,35 @@
     <!-- Dynamically adds images and videos to file viewer -->
     <div class="flexslider">
       <ul class="slides">
-        <% media_items = MediaItem.where(on_homepage:true).order('random()').limit(5) %>
+        <% home_media_items = HomepageMediaItem.where(published: true).order('"order" asc').limit(5) %>
+        <% home_media_items.each do |home_media_item| %>
+            <li>
+              <div class="frame">
+                <% if home_media_item.media_item_type.name == 'youtube' %>
+                    <%= raw(home_media_item.youtube_embed(home_media_item.url,320,580)) %>
+                    <div class="flex-caption">
+                      <p><b><%= link_to home_media_item.banner_text, home_media_item.banner_link,{:style=>'color:#3BB9FF;'} %></b></p>
+                    </div>
+                <% else %>
+                    <%= image_tag home_media_item.home_media.url %>
+                    <div class="flex-caption">
+                      <% if !home_media_item.banner_link.blank? %>
+                        <p><b><%= link_to home_media_item.banner_text, home_media_item.banner_link,{:style=>'color:#3BB9FF;'} %></b></p>
+                      <% else %>
+                        <%= home_media_item.banner_text %>
+                      <% end %>
+                    </div>
+                <% end %>
+              </div>
+            </li>
+        <% end %>
+
+        <% record_limit = 5 - home_media_items.count() %>
+        <% media_items = MediaItem.where(on_homepage:true).order('random()').limit(record_limit) %>
         <% if media_items.each do |media_item| %>
             <li>
               <div class="frame">
-                <% if media_item.media_type == 'youtube' %>
+                <% if media_item.media_item_type.name == 'youtube' %>
                     <%= raw(media_item.youtube_embed(media_item.url,320,580)) %>
                     <div class="flex-caption">
                         <p>Learn more about <b><%= link_to media_item.homepage_text, project_path(media_item.project_id),{:style=>'color:#3BB9FF;'} %></b></p>
