--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -61,7 +61,7 @@
 <div class='row-fluid' id='home_first_row' >
   <div class='span6'>
 
-    <!-- Dynamically adds images and videos to file viewer -->
+    <!--  Adds homepage items to media viewer -->
     <div class="flexslider">
       <ul class="slides">
         <% home_media_items = HomepageMediaItem.where(published: true).order('"order" asc').limit(5) %>
@@ -71,25 +71,25 @@
                 <% if home_media_item.media_item_type.name == 'youtube' %>
                     <%= raw(home_media_item.youtube_embed(home_media_item.url,320,580)) %>
                     <div class="flex-caption">
-                      <p><b><%= link_to home_media_item.banner_text, home_media_item.banner_link,{:style=>'color:#3BB9FF;'} %></b></p>
+                      <p><h4 style="color:#ffffff"><%= home_media_item.banner_title %></h4></p>
+                      <p><b><%= home_media_item.banner_text %> <%= link_to home_media_item.banner_link_text, home_media_item.banner_link,{:style=>'color:#3BB9FF;'} %></b></p>
+
                     </div>
                 <% else %>
                     <%= image_tag home_media_item.home_media.url %>
                     <div class="flex-caption">
-                      <% if !home_media_item.banner_link.blank? %>
-                        <p><b><%= link_to home_media_item.banner_text, home_media_item.banner_link,{:style=>'color:#3BB9FF;'} %></b></p>
-                      <% else %>
-                        <%= home_media_item.banner_text %>
-                      <% end %>
+                      <p><h4 style="color:#ffffff"><%= home_media_item.banner_title %></h4></p>
+                      <p><b><%= home_media_item.banner_text %> <%= link_to home_media_item.banner_link_text, home_media_item.banner_link,{:style=>'color:#3BB9FF;'} %></b></p>
                     </div>
                 <% end %>
               </div>
             </li>
         <% end %>
 
+        <!-- Adds random media items from projects to media viewer -->
         <% record_limit = 5 - home_media_items.count() %>
         <% media_items = MediaItem.where(on_homepage:true).order('random()').limit(record_limit) %>
-        <% if media_items.each do |media_item| %>
+        <% media_items.each do |media_item| %>
             <li>
               <div class="frame">
                 <% if media_item.media_item_type.name == 'youtube' %>
@@ -105,9 +105,6 @@
                 <% end %>
               </div>
             </li>
-            <!-- Default image, if no files/videos are published. -->
-        <% end.empty? %>
-            <%= image_tag('aiddata_notag.png')%>
         <% end %>
       </ul>
     </div>
