--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -68,19 +68,14 @@
             <li>
               <div class="frame">
                 <% if !home_media_item.url.blank? %>
-                    <%= raw(home_media_item.url) %>
-                    <div class="flex-caption">
-                      <p><h4 style="color:#ffffff"><%= home_media_item.banner_title %></h4></p>
-                      <p><b><%= home_media_item.banner_text %> <%= link_to home_media_item.banner_link_text, home_media_item.banner_link,{:style=>'color:#3BB9FF;'} %></b></p>
-
-                    </div>
+                    <%= raw(home_media_item.youtube_embed(home_media_item.url,320,580)) %>
                 <% else %>
-                    <%= image_tag home_media_item.home_media.url %>
-                    <div class="flex-caption">
-                      <p><h4 style="color:#ffffff"><%= home_media_item.banner_title %></h4></p>
-                      <p><b><%= home_media_item.banner_text %> <%= link_to home_media_item.banner_link_text, home_media_item.banner_link,{:style=>'color:#3BB9FF;'} %></b></p>
-                    </div>
+                    <%= image_tag(home_media_item.home_media.url) %>
                 <% end %>
+                <div class="flex-caption">
+                  <p><h4 style="color:#ffffff"><%= home_media_item.banner_title %></h4></p>
+                  <p><b><%= home_media_item.banner_text %> <%= link_to home_media_item.banner_link_text, home_media_item.banner_link,{:style=>'color:#3BB9FF;'} %></b></p>
+                </div>
               </div>
             </li>
         <% end %>
@@ -91,15 +86,12 @@
               <div class="frame">
                 <% if !media_item.url.blank? %>
                     <%= raw(media_item.youtube_embed(media_item.url,320,580)) %>
-                    <div class="flex-caption">
-                        <p>Learn more about <b><%= link_to media_item.homepage_text, project_path(media_item.project_id),{:style=>'color:#3BB9FF;'} %></b></p>
-                    </div>
                 <% else %>
                     <%= image_tag media_item.media.url %>
-                    <div class="flex-caption">
-                      <p>Learn more about <b><%= link_to media_item.homepage_text, project_path(media_item.project_id),{:style=>'color:#3BB9FF;'} %></b></p>
-                    </div>
                 <% end %>
+                <div class="flex-caption">
+                  <p>Learn more about <b><%= link_to media_item.homepage_text, project_path(media_item.project_id),{:style=>'color:#3BB9FF;'} %></b></p>
+                </div>
               </div>
             </li>
         <% end %>
