--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -81,19 +81,21 @@
         <% end %>
 
         <!-- Adds random media items from projects to media viewer -->
-        <% @project_media.each do |media_item| %>
-            <li>
-              <div class="frame">
-                <% if !media_item.url.blank? %>
-                    <%= raw(media_item.youtube_embed(media_item.url,320,580)) %>
-                <% else %>
-                    <%= image_tag media_item.media.url %>
-                <% end %>
-                <div class="flex-caption">
-                  <p>Learn more about <b><%= link_to media_item.homepage_text, project_path(media_item.project_id),{:style=>'color:#3BB9FF;'} %></b></p>
-                </div>
-              </div>
-            </li>
+        <% if !@project_media.nil? %>
+            <% @project_media.each do |media_item| %>
+                <li>
+                  <div class="frame">
+                    <% if !media_item.url.blank? %>
+                        <%= raw(media_item.youtube_embed(media_item.url,320,580)) %>
+                    <% else %>
+                        <%= image_tag media_item.media.url %>
+                    <% end %>
+                    <div class="flex-caption">
+                      <p>Learn more about <b><%= link_to media_item.homepage_text, project_path(media_item.project_id),{:style=>'color:#3BB9FF;'} %></b></p>
+                    </div>
+                  </div>
+                </li>
+            <% end %>
         <% end %>
       </ul>
     </div>
