--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
 
 <style>
     .flexslider {
-        width: 580px;
+        width: 100%;
         height: 350px;
         border: 0 !important;
         margin-bottom: 3em !important;
@@ -14,6 +14,7 @@
     .flexslider .frame {
         text-align: center;
         width: 100%;
+        overflow:hidden;
 
     }
     .flexslider .frame  img {
@@ -41,7 +42,7 @@
         background:rgba(0, 0, 0,0.6);
         z-index:1;
         padding:0px, 10px,10px,10px;
-        width:580px;
+        width:7.14%;
         color: #FFFFFF;
         alink: #C0C0C0;
     }
@@ -68,7 +69,7 @@
             <li>
               <div class="frame">
                 <% if !home_media_item.url.blank? %>
-                    <%= raw(home_media_item.youtube_embed(home_media_item.url,320,580)) %>
+                    <%= raw(home_media_item.youtube_embed(home_media_item.url,320,570)) %>
                 <% else %>
                     <%= image_tag(home_media_item.home_media.url) %>
                 <% end %>
@@ -86,7 +87,7 @@
                 <li>
                   <div class="frame">
                     <% if !media_item.url.blank? %>
-                        <%= raw(media_item.youtube_embed(media_item.url,320,580)) %>
+                        <%= raw(media_item.youtube_embed(media_item.url,320,570)) %>
                     <% else %>
                         <%= image_tag media_item.media.url %>
                     <% end %>
