--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -49,15 +49,100 @@
 </style>
 
 <script>
-    // Can also be used with $(document).ready()
-    // Javascript for file viewer
-    $(window).load(function() {
-        $('.flexslider').flexslider({
-            animation: "slide"
+    var players = {}; //Define a player storage object, to expose methods,
+    //  without having to create a new class instance again.
+    YT_ready(function() {
+        $(".frame + iframe[id]").each(function() {
+            var identifier = this.id;
+            var frameID = getFrameID(identifier);
+            if (frameID) { //If the frame exists
+                players[frameID] = new YT.Player(frameID, {
+                    events: {
+                        "onReady": createYTEvent(frameID, identifier),
+                        'onStateChange': on_youtube_play
+                    }
+                });
+            }
         });
     });
+
+    // Returns a function to enable multiple events
+    function createYTEvent(frameID, identifier) {
+        return function (event) {
+            var player = players[frameID]; // Set player reference
+            var the_div = $('#'+identifier).parent();
+            the_div.children('.frame').click(function() {
+                var $this = $(this);
+                $this.fadeOut().next().addClass('play');
+                if ($this.next().hasClass('play')) {
+                    player.playVideo();
+                }
+            });
+        }
+    }
+    function on_youtube_play(event) {
+        //console.log("state Change!", event)
+        if (event.data == YT.PlayerState.PLAYING ) {
+            //console.log("Youtube playing")
+            $('.flex-caption').slideToggle()
+            $('#home_carousel').carousel('pause')
+        }
+        else if (event.data == YT.PlayerState.PAUSED) {
+            //console.log("Youtube paused")
+            $('.flex-caption').slideToggle()
+            $('#home_carousel').carousel('cycle')
+        }
+    }
 </script>
-  
+<script>
+    var tag = document.createElement('script');
+
+    tag.src = "https://www.youtube.com/iframe_api";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+    var player_cgd, player_bcp;
+    function onYouTubeIframeAPIReady() {
+        player_cgd = new YT.Player('player_cgd', {
+            height: '321',
+            width: '570',
+            videoId: 'h1pLIQ_fsls',
+            playerVars: {
+                'wmode' : 'opaque',
+                //'origin' :
+            },
+            events: {
+                'onStateChange': on_youtube_play
+            }
+        });
+        player_bcp = new YT.Player('player_bcp', {
+            height: '321',
+            width: '570',
+            videoId: '2t8QH_q2PGs',
+            playerVars: {
+                'wmode' : 'opaque',
+                //'origin' :
+            },
+            events: {
+                'onStateChange': on_youtube_play
+            }
+        })
+    }
+    function on_youtube_play(event) {
+        //console.log("state Change!", event)
+        if (event.data == YT.PlayerState.PLAYING ) {
+            //console.log("Youtube playing")
+            $('.youtube-caption').slideToggle()
+            $('#home_carousel').carousel('pause')
+        }
+        else if (event.data == YT.PlayerState.PAUSED) {
+            //console.log("Youtube paused")
+            $('.youtube-caption').slideToggle()
+            $('#home_carousel').carousel('cycle')
+        }
+    }
+
+
+</script>
 
 <div class='row-fluid' id='home_first_row' >
   <div class='span6'>
