--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -48,10 +48,11 @@
     .flex-caption {
         position:absolute;
         left:50;right:50;bottom:0;
+        max-height: 60px;
         min-height: 30px;
         background:rgba(0, 0, 0,0.6);
         z-index:1;
-        padding:0px, 10px,0px,10px;
+        padding:0px,10px,10px,10px;
         width:7.14%;
         color: #FFFFFF;
         alink: #C0C0C0;
@@ -74,8 +75,10 @@
                     <%= image_tag(home_media_item.home_media.url) %>
                 <% end %>
                 <div class="flex-caption">
-                  <p><h4 style="color:#ffffff"><%= home_media_item.banner_title %></h4></p>
-                  <p><b><%= home_media_item.banner_text %> <%= link_to home_media_item.banner_link_text, home_media_item.banner_link,{:style=>'color:#3BB9FF;'} %></b></p>
+                  <p>
+                    <h4 style="color:#ffffff"><%= home_media_item.banner_title %></h4>
+                    <b><%= home_media_item.banner_text %> <%= link_to home_media_item.banner_link_text, home_media_item.banner_link,{:style=>'color:#3BB9FF;'} %></b>
+                  </p>
                 </div>
               </div>
             </li>
