--- a/app/views/media_items/_media_upload_form.html.erb
+++ b/app/views/media_items/_media_upload_form.html.erb
@@ -40,7 +40,7 @@
           <li>
             <div class="frame">
               <% if !media_item.url.blank? %>
-                  <%= raw(media_item.youtube_embed(media_item.url, 329, 545,'iframe')) %>
+                  <%= raw(media_item.youtube_embed(media_item.url, 329, 545)) %>
               <% else %>
                   <%= image_tag media_item.media.url %>
               <% end %>
