made toggle fast

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -57,7 +57,7 @@
         //console.log("state Change!", event)
         if (event.data == YT.PlayerState.PLAYING ) {
             //console.log("Youtube playing")
-            $('.youtube-caption').slideToggle("slow");
+            $('.youtube-caption').slideToggle("fast");
 
         }
         else if (event.data == YT.PlayerState.PAUSED) {
