added padding right for banner-text

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -115,6 +115,7 @@
         display: inline-table;
         text-align: inherit;
         padding-left: 10px;
+        padding-right: 10px
 
     }
 
